--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <meta name="robots" content="index, follow"/>
     <link rel="author" href="https://plus.google.com/u/1/+AyushSharma1/"/>
     <meta name="keywords" content="Birthday, Happy">
+    <link rel="shortcut icon" href="./imgs/logo.png" type="image/x-icon">
     <!-- Strat of Facebook Meta -->
     <meta property="og:type" content="E-Greeting"/>
     <meta property="og:image" content="favicon.ico"/>
